node-docker-kube-gcp/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ndk-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ndk
  template:
    metadata:
      labels:
        app: ndk
    spec:
      containers:
      - name: ndk-container
        image: yacinetouati/node-docker-kube:2
        ports:
        - name: nodejs-port
          containerPort: 3000
