node-docker-kube-gcp/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: ndk-service
spec:
  selector:
    app: ndk
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: nodejs-port
